<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    style="@style/RoundedContainerStyle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:text="HISTORY"
        app:icon="@drawable/baseline_history_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_layout">


        <Button
            android:id="@+id/day_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"

            android:layout_weight="1"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/day"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#7DD6F3" />


        <Button
            android:id="@+id/week_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/week"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#DF42AE" />

        <Button
            android:id="@+id/month_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/month"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#78D3CE" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--progress bar implementation-->

        <!--        <ProgressBar-->
        <!--            android:id="@+id/progress_bar"-->
        <!--            style="?android:attr/progressBarStyleHorizontal"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:background="@drawable/circular_shape"-->
        <!--            android:indeterminate="false"-->
        <!--            android:progressDrawable="@drawable/circular_progress_bar"-->
        <!--            android:textAlignment="center" />-->

        <!--        <ProgressBar-->
        <!--            android:id="@+id/progress_bar2"-->
        <!--            style="?android:attr/progressBarStyleHorizontal"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_alignParentStart="true"-->
        <!--            android:layout_alignParentTop="true"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:layout_alignParentBottom="true"-->
        <!--            android:layout_marginStart="30dp"-->
        <!--            android:layout_marginTop="30dp"-->
        <!--            android:layout_marginEnd="30dp"-->
        <!--            android:layout_marginBottom="30dp"-->
        <!--            android:background="@drawable/circular_shape"-->
        <!--            android:indeterminate="false"-->
        <!--            android:progressDrawable="@drawable/circular_progress_bar2"-->
        <!--            android:textAlignment="center" />-->

        <!--Text implementation in center of the progress bar-->

        <!--        <com.mikhaellopez.circularprogressbar.CircularProgressBar-->
        <!--            android:id="@+id/progress_bar2"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:cpb_background_progressbar_color="#b6bbd8"-->
        <!--            app:cpb_background_progressbar_width="5dp"-->
        <!--            app:cpb_progress_direction="to_right"-->
        <!--            app:cpb_progressbar_color="#3f51b5"-->
        <!--            app:cpb_progressbar_width="10dp"-->
        <!--            app:cpb_round_border="true"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:cpb_progressbar_color_start="@color/white"-->
        <!--            app:cpb_progressbar_color_end="@color/black"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->
        <!--        -->
        <!--        <com.mikhaellopez.circularprogressbar.CircularProgressBar-->
        <!--            android:id="@+id/progress_bar3"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:cpb_background_progressbar_color="#b6bbd8"-->
        <!--            app:cpb_background_progressbar_width="5dp"-->
        <!--            app:cpb_progress_direction="to_right"-->
        <!--            app:cpb_progressbar_color="#3f51b5"-->
        <!--            app:cpb_progressbar_width="10dp"-->
        <!--            app:cpb_round_border="true"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:cpb_progressbar_color_start="@color/white"-->
        <!--            app:cpb_progressbar_color_end="@color/black"-->
        <!--            android:layout_alignStart="@+id/progress_bar2"-->
        <!--            android:layout_alignTop="@+id/progress_bar2"-->
        <!--            android:layout_alignEnd="@+id/progress_bar2"-->
        <!--            android:layout_alignBottom="@+id/progress_bar2"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

        <!--        <ProgressBar-->
        <!--      -->
        <!--            style="?android:attr/progressBarStyleHorizontal"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--  -->
        <!--            android:layout_marginStart="30dp"-->
        <!--            android:layout_marginTop="30dp"-->
        <!--            android:layout_marginEnd="30dp"-->
        <!--            android:layout_marginBottom="30dp"-->
        <!--            android:background="@drawable/circular_shape"-->
        <!--            android:indeterminate="false"-->
        <!--            android:progressDrawable="@drawable/circular_progress_bar3"-->
        <!--            android:textAlignment="center" />-->

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="300sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:cpb_background_progressbar_color="#41424A"
            app:cpb_background_progressbar_width="5dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="#3f51b5"
            app:cpb_progressbar_color_end="@color/end_progressbar1"
            app:cpb_progressbar_color_start="@color/start_progressbar1"
            app:cpb_progressbar_width="10dp"
            app:cpb_round_border="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/progress_bar2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            app:cpb_background_progressbar_color="#41424A"
            app:cpb_background_progressbar_width="5dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="#3f51b5"

            app:cpb_progressbar_color_end="@color/end_progressbar2"
            app:cpb_progressbar_color_start="@color/start_progressbar2"
            app:cpb_progressbar_width="10dp"
            app:cpb_round_border="true"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
            app:layout_constraintStart_toStartOf="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="@+id/progress_bar"
            app:layout_constraintDimensionRatio="1:1"/>

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/progress_bar3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:cpb_background_progressbar_color="#41424A"
            app:cpb_background_progressbar_width="5dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="#3f51b5"
            app:cpb_progressbar_color_end="@color/end_progressbar3"
            app:cpb_progressbar_color_start="@color/start_progressbar3"
            app:cpb_progressbar_width="10dp"
            app:cpb_round_border="true"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="@+id/progress_bar"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintDimensionRatio="1:1"/>

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="---"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
            app:layout_constraintStart_toStartOf="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="@+id/progress_bar" />

        <TextView
            android:id="@+id/tv_home_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/coin"
            android:textColor="@color/design_default_color_on_primary"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
            app:layout_constraintStart_toStartOf="@+id/progress_bar"
            app:layout_constraintTop_toBottomOf="@+id/progress_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>